# py-scratch

./: .gitignore  README.md  hello.py  pyproject.toml
.github/workflows/: ci.yml
docs/: design-notes.md  dsl-reference.md  opcode-reference.md  vm-reference.md
examples/: all_in_one.py  bouncing_ball.py  calculator.py  cat_chase_mouse.py  circle_walker.py  key_mover.py  mouse_follower.py  pen_artist.py
scratch/dsl/: __init__.py  builder.py  control.py  data.py  events.py  expr.py  looks.py  motion.py  operators.py  pen.py  project.py  sensing.py
scratch/sb3/: __init__.py  __main__.py  io.py  transcriber.py
scratch/vm/: __init__.py  __main__.py  cloud.py  constants.py  demo.py  opcodes.py  renderer.py  runtime.py  target.py  thread.py  types.py
src/scratch_vm/: __init__.py  __main__.py  demo.py  opcodes.py  renderer.py  runtime.py  target.py  thread.py  types.py
tests/: conftest.py  test_dsl.py  test_roundtrip.py  test_sb3.py  test_sb3_validation.py  test_transcriber.py  test_units.py
tests/verifier/: package.json  validate.mjs
